cmake_minimum_required(VERSION 3.16)

project(ValvanoWare)

function(add_ValvanoWare_lib LIB_NAME LIB_SRCS LIB_DEPENDS)
    add_library(${LIB_NAME} STATIC ${LIB_SRCS})
    target_include_directories(${LIB_NAME} PRIVATE inc/ValvanoWare)
    target_include_directories(${LIB_NAME} PUBLIC  inc/)
    target_link_libraries(${LIB_NAME} TivaWare ${LIB_DEPENDS})
    set(VALVANOWARE_ALL_LIBS "${VALVANOWARE_ALL_LIBS} ${LIB_NAME}")
endfunction()

add_ValvanoWare_lib(${PROJECT_NAME}_ADCSWTrigger "src/ADCSWTrigger.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_ADCT0ATrigger "src/ADCT0ATrigger.c" "${PROJECT_NAME}_CortexM")
add_ValvanoWare_lib(${PROJECT_NAME}_AGM1264F "src/AGM1264F.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_AP "src/AP.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Board "src/Board.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_BSP "src/BSP.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_can0 "src/can0.c" "TivaWare_driverlib")
add_ValvanoWare_lib(${PROJECT_NAME}_Clock "src/Clock.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_CortexM "src/CortexM.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_fft "src/cr4_fft_64_stm32.s;src/cr4_fft_256_stm32.s;src/cr4_fft_1024_stm32.s" "")
add_ValvanoWare_lib(${PROJECT_NAME}_DMASoftware "src/DMASoftware.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_DMASPI "src/DMASPI.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_DMATimerRead "src/DMATimerRead.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_DMATimerWrite "src/DMATimerWrite.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_EdgeCount "src/EdgeCount.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_EdgeInterruptPortF "src/EdgeInterruptPortF.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_eDisk "src/eDisk.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_esp8266 "src/esp8266.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_FIFOsimple "src/FIFOsimple.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_FlashProgram "src/FlashProgram.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_FreqMeasure "src/FreqMeasure.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Fuzzy "src/Fuzzy.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_GPIO "src/GPIO.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_HD44780 "src/HD44780.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_HeapBlock "src/HeapBlock.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_I2C0 "src/I2C0.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_I2C1 "src/I2C1.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_I2C2 "src/I2C2.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_I2C4 "src/I2C3.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_I2CB1 "src/I2CB1.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_InputCapture "src/InputCapture.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_IRDistance "src/IRDistance.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_LaunchPad "src/LaunchPad.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_LED "src/LED.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_LLFifo "src/LLFifo.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_LPF "src/LPF.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Matrix "src/Matrix.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_max549 "src/max549.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_MAX5353 "src/MAX5353.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Nokia5110 "src/Nokia5110.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_odometry "src/odometry.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_opt3101 "src/opt3101.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_PID_stm32 "src/PID_stm32.s" "")
add_ValvanoWare_lib(${PROJECT_NAME}_PLL "src/PLL.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Profile "src/Profile.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_PWM "src/PWM.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_PWMdual "src/PWMdual.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_PWMRobot "src/PWMRobot.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_random "src/random.s" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Sine "src/Sine.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SSD1306 "src/SSD1306.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SSD2119 "src/SSD2119.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_ST7735 "src/ST7735.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_ST7735_PortD "src/ST7735_PortD.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Switch "src/Switch.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SwitchExternal "src/SwitchExternal.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SwitchPA5 "src/SwitchPA5.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SysTick "src/SysTick.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_SysTickInts "src/SysTickInts.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Texas "src/Texas.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer "src/Timer.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer0A "src/Timer0A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer0APWM "src/Timer0APWM.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer1A "src/Timer1A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer2A "src/Timer2A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer3A "src/Timer3A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer4A "src/Timer4A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_Timer5A "src/Timer5A.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_UART "src/UART.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_UART0int "src/UART0int.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_UART1 "src/UART1.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_UART1int "src/UART1int.c" "")
add_ValvanoWare_lib(${PROJECT_NAME}_WTimer0A "src/WTimer0A.c" "")

add_compile_definitions(PRIVATE
    __TI_COMPILER_VERSION__=0 # Enable CCS GCC-compatible code
    gcc
)
